Updated from deprecated Integer constructor to Integer.valueOf()